<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp" >

    <Button
        android:id="@+id/findCityHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/findCityResearcht"
        android:text="@string/cityfinder_home"
        android:visibility="gone" />

    <Button
        android:id="@+id/findCityResearcht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/findCityCorrect"
        android:gravity="center"
        android:text="@string/cityfinder_research"
        android:visibility="gone" />

    <Button
        android:id="@+id/findCityCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/resultTextView"
        android:text="@string/cityfinder_correct"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dlgMsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultTextView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/cityfinder_desc"
        android:textColor="#444"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="  "
        android:textColor="#444" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dlgMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp" />

    <Button
        android:id="@+id/findCityNoInternet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findCityUsingInternet"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cityfinder_searchWithoutInternet"
        android:visibility="visible" />

    <Button
        android:id="@+id/nosearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findCityNoInternet"
        android:layout_centerHorizontal="true"
        android:text="@string/cityfinder_nosearch"
        android:visibility="visible" />

    <Button
        android:id="@+id/findCityUsingInternet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/findCityNoInternet"
        android:layout_below="@+id/resultTextView"
        android:text="@string/cityfinder_searchInternet"
        android:visibility="visible" />

</RelativeLayout>