<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/about" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:autoLink="all"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/teamName"
        android:textColor="#5c6577"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:autoLink="all"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/website"
        android:textColor="#5c6577"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="#5c6577"
        android:textStyle="bold" />
<!--
    <Button
        android:id="@+id/feadbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/feedback"
        android:width="120dp" />
-->
</RelativeLayout>